fix(scroll-btn-arrow): fix scroll-btn-arrow responsiveness on small screens

--- a/src/styles/components/_scroll-btn-arrow.scss
+++ b/src/styles/components/_scroll-btn-arrow.scss
@@ -3,7 +3,7 @@
 .scroll-btn-arrow {
     position: fixed;
     bottom: 50px;
-    left: 90%;
+    right: 10%;
     translate: none;
     display: flex;
     justify-content: center;
